syntax = "proto3";
option go_package = "./;messenger";

service MessengerSvc {
  rpc GetInvitationLink(GetInvitationLinkReq) returns(GetInvitationLinkRes) {};
  rpc GetContactRequests(GetContactRequestsReq) returns(stream GetContactRequestsRes) {};
  rpc AcceptContactRequest(AcceptContactRequestReq) returns(AcceptContactRequestRes) {};
  rpc SendMessage(SendMessageReq) returns(SendMessageRes) {};
}


message GetInvitationLinkReq {};

message GetInvitationLinkRes {
  string link = 1;
}

message GetContactRequestsReq {
  bool store = 1;
  string storeDir = 2;
};

message GetContactRequestsRes {
  message ContactRequest {
    string name = 1;
    bytes public_key = 2;
  }
  repeated ContactRequest contact_requests = 1;
}

message AcceptContactRequestReq {
  string pathToPubkey = 1;
};

message AcceptContactRequestRes {
  bool success = 1;
};

message SendMessageReq {
  string pathToPubkey = 1;
  string message = 2;
};

message SendMessageRes {
  bool success = 1;
};
